Added ability to disable monospacer if user wants to take advantage only of xOffset calculations

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,10 @@ input {
     align-items: center;
 }
 
+.flex-direction-column{
+    flex-direction: column;
+}
+
 .color-lime {
     color: rgb(6, 175, 6);
 }
